--- a/VoiceAssistantTests/VoiceAssistantTests.csproj
+++ b/VoiceAssistantTests/VoiceAssistantTests.csproj
@@ -83,6 +83,7 @@
     <Compile Include="ActivationKeyTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shortcuts code\ShortcutTests.cs" />
+    <Compile Include="VoiceRecorderTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
