--- a/VoiceAssistant/packages.config
+++ b/VoiceAssistant/packages.config
@@ -13,8 +13,10 @@
   <package id="Moq.AutoMock" version="3.4.0" targetFramework="net472" />
   <package id="MouseKeyHook" version="5.6.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="Selenium.Support" version="3.141.0" targetFramework="net472" />
-  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
+  <package id="NUnit" version="3.13.3" targetFramework="net472" />
+  <package id="NUnit3TestAdapter" version="4.3.0" targetFramework="net472" />
+  <package id="Selenium.Support" version="4.6.0" targetFramework="net472" />
+  <package id="Selenium.WebDriver" version="4.6.0" targetFramework="net472" />
   <package id="Selenium.WebDriver.ChromeDriver" version="107.0.5304.6200" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
