--- a/VoiceAssistantTests/packages.config
+++ b/VoiceAssistantTests/packages.config
@@ -5,6 +5,7 @@
   <package id="Moq.AutoMock" version="3.4.0" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="2.2.7" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.2.7" targetFramework="net472" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="107.0.5304.6200" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
