--- a/VoiceAssistantTests/VoiceAssistantTests.csproj
+++ b/VoiceAssistantTests/VoiceAssistantTests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="MantasOnlineTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shortcuts code\ShortcutTests.cs" />
+    <Compile Include="TimeTests.cs" />
     <Compile Include="VoiceRecorderTests.cs" />
   </ItemGroup>
   <ItemGroup>
